--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/UncAnnyZ/WeAI-Dynamic-build#readme",
   "devDependencies": {
-    "@we-dynamic/build": "/Users/un/Desktop/zw_create/openDynamicReact",
+    "@we-dynamic/build": "^1.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
