--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-  "name": "",
-  "version": "",
-  "description": ""
+  "name": "test",
+  "version": "0.0.1",
+  "description": "测试",
+  "author": "uncannyz"
 }
