--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "wedev watch",
     "build": "wedev build",
+    "release": "wedev release",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "commonjs",
@@ -23,7 +24,7 @@
   },
   "homepage": "https://github.com/UncAnnyZ/WeAI-Dynamic-build#readme",
   "devDependencies": {
-    "@we-dynamic/build": "^1.0.10",
+    "@we-dynamic/build": "^1.0.15",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
