--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "@we-dynamic/build": "^1.0.16",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24"
   }
 }
